--- a/web/src/views/index.html
+++ b/web/src/views/index.html
@@ -4,124 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-    <!-- framework de bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- íconos de bootstrap para sidebar -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
-    />
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row">
-        <!-- Sidebar (barra lateral del menú) -->
-        <div class="col-auto bg-light sticky-top min-vh-100 sidebar">
-          <div
-            class="d-flex flex-column align-items-center justify-content-between h-100"
-          >
-            <a
-              href="/"
-              class="d-block p-3 link-dark text-decoration-none"
-              title="Inicio"
-              data-bs-toggle="tooltip"
-              data-bs-placement="right"
-            >
-              <i class="bi-bootstrap fs-1"></i>
-            </a>
-            <ul
-              class="nav nav-pills nav-flush flex-column mb-auto text-center align-items-center"
-            >
-              <li class="nav-item">
-                <a
-                  href="#"
-                  class="nav-link py-3 px-2"
-                  title="Inicio"
-                  data-bs-toggle="tooltip"
-                  data-bs-placement="right"
-                >
-                  <i class="bi-house fs-1"></i>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="nav-link py-3 px-2"
-                  title="Dashboard"
-                  data-bs-toggle="tooltip"
-                  data-bs-placement="right"
-                >
-                  <i class="bi-speedometer2 fs-1"></i>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="nav-link py-3 px-2"
-                  title="Tablas"
-                  data-bs-toggle="tooltip"
-                  data-bs-placement="right"
-                >
-                  <i class="bi-table fs-1"></i>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="nav-link py-3 px-2"
-                  title="Favoritos"
-                  data-bs-toggle="tooltip"
-                  data-bs-placement="right"
-                >
-                  <i class="bi-heart fs-1"></i>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="nav-link py-3 px-2"
-                  title="Usuarios"
-                  data-bs-toggle="tooltip"
-                  data-bs-placement="right"
-                >
-                  <i class="bi-people fs-1"></i>
-                </a>
-              </li>
-            </ul>
-            <div class="dropdown pb-3">
-              <a
-                href="#"
-                class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle"
-                id="dropdownUser3"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="bi-person-circle h2"></i>
-              </a>
-              <ul
-                class="dropdown-menu text-small shadow"
-                aria-labelledby="dropdownUser3"
-              >
-                <li><a class="dropdown-item" href="#">Nuevo proyecto</a></li>
-                <li><a class="dropdown-item" href="#">Configuración</a></li>
-                <li><a class="dropdown-item" href="#">Perfil</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <script type="module" src="../controllers/index.controller.js"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/Footer.css" />
 
-        <!-- main -->
-        <div class="col p-4">
-          <h1></h1>
-          <p></p>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tutosrive/legendary-guacamole@main/css/from-prog2/v1/toast.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" />
+    <script defer type="module" src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+  </head>
+  <body data-bs-theme="light">
+    <div id="climate-container" class="container-climate position-absolute top-0 end-0 mt-2 me-3"></div>
+    <!-- sidebar -->
+    <div class="position-fixed p-4 rounded-4 ms-2 sidebar d-none d-md-block">
+      <div class="d-flex flex-column align-items-center">
+        <a href="#home" id="home-link" class="d-block pt-1 link-dark text-decoration-none" title="Inicio" data-bs-toggle="tooltip" data-bs-placement="right">
+          <img class="img-jpg" src="./Resources/Admiral.png" width="34px" alt="" />
+        </a>
+        <ul class="nav nav-pills nav-flush flex-column mb-0 mt-3 text-center align-items-center">
+          <li class="nav-item">
+            <a id="map-link" href="#map" class="nav-link position-absolute top-100"></a>
+          </li>
+        </ul>
+        <div class="dropdown dropend">
+          <a href="#" class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle" id="dropdownUser" data-bs-toggle="dropdown" aria-expanded="false" title="User Options" data-bs-placement="right">
+            <i class="bi-person-circle h2 p-2 ms-1 person-circle"></i>
+          </a>
+          <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser">
+            <li><a class="dropdown-item" href="#user/profile">Perfil</a></li>
+            <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="#user/logout">Logout</a></li>
+          </ul>
         </div>
       </div>
     </div>
-
-    <!-- script de bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Top Sidebar -->
+    <div class="d-md-none sticky-top p-2 w-25">
+      <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle w-100" type="button" id="sidebarDropdown" data-bs-toggle="dropdown" aria-expanded="false">Menu</button>
+        <ul class="dropdown-menu w-25" aria-labelledby="sidebarDropdown">
+          <li>
+            <a class="dropdown-item" href="#home"> <i class="bi-house fs-5 me-2"></i> Inicio </a>
+          </li>
+          <li><hr class="dropdown-divider" /></li>
+          <li><a class="dropdown-item" href="#user/profile">Perfil</a></li>
+          <li><a class="dropdown-item" href="#user/logout">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="mx-auto d-block p-2 col-11 mb-3" id="main"></div>
+    <!-- Footer -->
+    <footer class="custom-footer d-flex align-items-center justify-content-start px-3 justify-content-center">
+      <img src="https://i.postimg.cc/C5RXT0YK/Gemini-Generated-Image-go8jhdgo8jhdgo8j.jpg" alt="Logo" class="footer-logo me-3" />
+      <h5 class="footer-title mb-0">
+        NAVAL <span class="smaller">WITH</span> BATTLE WITH A<span class="footer-r">I<sup>®</sup></span>
+      </h5>
+    </footer>
   </body>
 </html>
